-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7
-
Component/s: hotspot
-
b130
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2206761 | hs21 | Mandy Chung | P3 | Closed | Fixed | b02 |
jkernel will not be supported in JDK 7 and the sun.misc.BootClassLoaderHook is
going to be removed from the JDK (see 7016707). This CR is to remove setting of
the sun.jkernel.DownloadManager as a boot classloader hook in the hotspot side.
going to be removed from the JDK (see 7016707). This CR is to remove setting of
the sun.jkernel.DownloadManager as a boot classloader hook in the hotspot side.
- backported by
-
JDK-2206761 Remove setting of the sun.jkernel.DownloadManager as a boot classloader hook
-
- Closed
-
- relates to
-
JDK-6888880 JKernel VM to inject the sun.jkernel.DownloadManager as a boot classloader hook
-
- Closed
-
-
JDK-7016707 Remove the BootClassLoaderHook for jkernel support
-
- Closed
-