7017673: Remove setting of the sun.jkernel.DownloadManager as a boot classloader hook

Reviewed-by: alanb, dcubed, coleenp